ReqBody && Created Model

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -23,7 +23,7 @@
 					<div class="row mt-3 mb-5 pb-3">
 						<div class="col-12">
 							<div class="mx-auto tm-about-text-container px-3">
-								<h2 class="tm-page-title mb-4 tm-text-primary">About the Video Catalog</h2>
+								<h2 class="tm-page-title mb-4 tm-text-primary">About the F1 Catalog</h2>
 								<p class="mb-4">Video Catalog is free HTML CSS template for your website. This Bootstrap v4.4.1 website template is 100% free download for everyone. You can modify and expand this template for your CMS websites. You can use it for commercial or non-commercial work. If you wish to support <a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>, please contact us.</p>
 								<p class="mb-4">You are <u>not allowed</u> to re-distribute the template ZIP file on any template collection website.</p>
 								<p class="mb-4">Vivamus sit amet justo sed erat iaculis consequat. Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu. Etiam a bibendum lorem. Curabitur ac bibendum odio. Vivamus euismod dui mauris, ut tincidunt mi congue quis.</p>
