--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -39,7 +39,7 @@
 
                 <footer class="row pt-5">
                     <div class="col-12">
-                        <p class="text-right">Copyright 2020 The Video Catalog Company 
+                        <p class="text-right">Copyright 2022 The Altinok Company 
                         
                         - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
                     </div>
