--- a/views/addPhoto.ejs
+++ b/views/addPhoto.ejs
@@ -10,7 +10,7 @@
                         <div class="col-7 col-md-4">
                             <a href="index.html" class="tm-bg-black text-center tm-logo-container">
                                 <i class="fas fa-video tm-site-logo mb-3"></i>
-                                <h1 class="tm-site-name">Video Catalog</h1>
+                                <h1 class="tm-site-name">F1 Gallery</h1>
                             </a>
                         </div>
                         <div class="col-5 col-md-8 ml-auto mr-0">
@@ -73,25 +73,20 @@
 					</div>
                     <div class="mx-auto pb-3 tm-about-text-container px-3">
                         <div class="row">
-                            <div class="offset-1 col-lg-10 mb-5">
-                                <form id="contact-form" action="" method="POST" class="tm-contact-form">
+                            <div class="col-lg-12 mb-5">
+                                <form id="contact-form" action="/photos123" method="POST" class="tm-contact-form">
                                   <div class="form-group">
-                                    <input type="text" name="name" class="form-control rounded-0" placeholder="Name" required="" />
+                                    <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required="" />
                                   </div>
+                                 
+                                 
                                   <div class="form-group">
-                                    <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required="" />
+                                    <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Photo Description"
+                                     required></textarea>
                                   </div>
+
                                   <div class="form-group">
-                                    <select class="form-control" id="contact-select" name="inquiry">
-                                      <option value="-">Subject</option>
-                                      <option value="sales">Sales &amp; Marketing</option>
-                                      <option value="creative">Creative Design</option>
-                                      <option value="uiux">UI / UX</option>
-                                    </select>
-                                  </div>
-                                  <div class="form-group">
-                                    <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message"
-                                              required=""></textarea>
+                                      <input type="file" name="image" class="form-control-file rounded-0" >
                                   </div>
 
                                   <div class="form-group mb-0">
