model&dynamic content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 		</div>
 
 		<!-- Page content -->
-		<div class="container-fluid">
+		<div class="container">
 			<div class="mx-auto tm-content-container">
 				<main>
 					<div class="row mb-5 pb-4">
@@ -29,7 +29,9 @@
 							</video>
 						</div>
 					</div>
+
 					<div class="row mb-5 pb-5">
+						
 						<div class="col-xl-8 col-lg-7">
 							<!-- Video description -->
 							<div class="tm-video-description-box">
@@ -39,105 +41,44 @@
 								<p class="mb-4">Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras euismod leo a urna placerat, vel blandit turpis fermentum.</p>	
 							</div>							
 						</div>
-						<div class="col-xl-4 col-lg-5">
-							<!-- Share box -->
-							<div class="tm-bg-gray tm-share-box">
-								<h6 class="tm-share-box-title mb-4">Share this video</h6>
-								<div class="mb-5 d-flex">
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-facebook"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-twitter"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-pinterest"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="far fa-envelope"></i></a>
-								</div>
-								<p class="mb-4">Author: <a href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
-								<a href="#" class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
-									<i class="fas fa-heart mr-3 tm-liked-icon"></i>
-									<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
-									<span id="tm-likes-count">486 likes</span>
-								</a>
-								<div>
-									<button class="btn btn-primary p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Download Video</span></button>	
-								</div>								
-							</div>
-						</div>
+					
 					</div>
 					<div class="row pt-4 pb-5">
 						<div class="col-12">
 							<h2 class="mb-5 tm-text-primary">Related Videos for You</h2>
 							<div class="row tm-catalog-item-list">
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-02.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-03.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-04.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-05.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-06.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                    </div>
+
+
+
+									<% for (let i =0; i < photos.length; i++) { %>
+
+										<div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+											<div class="position-relative tm-thumbnail-container">
+												<img src="https://www.sonperiyot.com/wp-content/uploads/2021/01/alex-albon-dtm-serisinde-yarisacak.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+												<a href="https://www.youtube.com/watch?v=MWrJDBE02AI&ab_channel=YasinYavuz" class="position-absolute tm-img-overlay">
+													<i class="fas fa-play tm-overlay-icon"></i>
+												</a>
+											</div>    
+											<div class="p-3 tm-catalog-item-description">
+												<h3 class="tm-text-gray text-center tm-catalog-item-title"> <%= photos[i].title %></h3>
+												<p class="tm-catalog-item--text"> <%= photos[i].description %></p>														
+											</div>
+										</div>
+
+									<% } %>
+									
+
+								</div>
+							</div>
 						</div>
-					</div>
-				</main>
+					</main>
+	
+					<%- include('partials/_footer') -%>
 
-				<%- include('partials/_footer') -%>
+					
 
+
+					
     <script>
     	$(document).ready(function() {
     		$('.tm-likes-box').click(function(e) {
