--- a/views/addPhoto.ejs
+++ b/views/addPhoto.ejs
@@ -74,7 +74,7 @@
                     <div class="mx-auto pb-3 tm-about-text-container px-3">
                         <div class="row">
                             <div class="col-lg-12 mb-5">
-                                <form id="contact-form" action="/photos123" method="POST" class="tm-contact-form">
+                                <form id="contact-form" action="/photos" method="POST" class="tm-contact-form">
                                   <div class="form-group">
                                     <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required="" />
                                   </div>
