--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,10 +35,17 @@
 						<div class="col-xl-8 col-lg-7">
 							<!-- Video description -->
 							<div class="tm-video-description-box">
-								<h2 class="mb-5 tm-video-title">Mauris dapibus urna nec ipsum posuere</h2>
-								<p class="mb-4">Cras dictum pretium est, et imperdiet ex. Fusce vitae vestibulum ipsum. Maecenas ultricies ipsum a urna ullamcorper, id interdum est blandit. Vivamus sit amet justo sed erat iaculis consequat. Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu.</p>
-								<p class="mb-4">Etiam a bibendum lorem. Curabitur ac bibendum odio. Vivamus euismod dui mauris, ut tincidunt mi congue quis. Phasellus luctus orci dolor, a luctus massa tincidunt vitae. Integer sit amet odio id libero tincidunt dignissim in eget arcu.</p>
-								<p class="mb-4">Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras euismod leo a urna placerat, vel blandit turpis fermentum.</p>	
+								<h2 class="mb-5 tm-video-title">FORMULA 1</h2>
+								<p class="mb-4">Formula 1 (Formula Bir veya F1 olarak da bilinir); tek kişilik, açık tekerlekli otomobil yarışlarının en yüksek düzeyini oluşturan yarışlar dizisidir.
+									F1; bir yıl boyunca, her birine Grand Prix adı verilen ve değişik ülkelerde özel yollarda koşulan yarışlardan oluşur. Yıl sonunda toplanan puanlara göre Pilotlar Şampiyonluğu ile Takımlar Şampiyonası (Otomobil Yapımcıları Birinciliği) ödülleri verilir.
+									Yarışları Jean Todt'un başkanlığını yaptığı FIA (Uluslararası Otomobil Federasyonu) düzenler. 
+									F1'in geçmişinde yarışların çoğunluğu Avrupa'da yapılmış olmasına karşın, son yıllarda artan sayıda yarışlar
+									 Avrupa dışına kaydırılmaktadır. Bunda ana neden, FIA'nın gelişen yeni pazarlara açılmak istemesi olsa da, 
+									 yasal düzenlemelerin AB ülkelerindeki kadar sıkı olmadığı ülkelerin çekiciliği de bu kararda etkin olmuştur. 
+									 Son yıllarda AB'deki yarışlarda, sağlık gerekçeleriyle tütün ürünlerinin tanıtımlarının yasaklanması, 
+									 ölümle sonuçlanan bazı kazaların yerel savcılıklarca (takımların savsaması sonucu olup olmadığının) soruştur FIA'ca hoş karşılanmamıştır. 
+									Dünyanın en çok izlenen spor dallarındandır. 2010 yılında dünya çapında 527 milyon televizyon izleyicisine ulaşmıştır.
+								</p>	
 							</div>							
 						</div>
 					
@@ -54,8 +61,8 @@
 
 										<div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
 											<div class="position-relative tm-thumbnail-container">
-												<img src="https://www.sonperiyot.com/wp-content/uploads/2021/01/alex-albon-dtm-serisinde-yarisacak.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-												<a href="https://www.youtube.com/watch?v=MWrJDBE02AI&ab_channel=YasinYavuz" class="position-absolute tm-img-overlay">
+												<img src="<%= photos[i].image %>" alt="Image" class="img-fluid tm-catalog-item-img">    
+												<a href="/photos/<%= photos[i]._id %>" class="position-absolute tm-img-overlay">
 													<i class="fas fa-play tm-overlay-icon"></i>
 												</a>
 											</div>    
