--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,5 +1,5 @@
 				<!-- Subscribe form and footer links -->
-                <div class="row mt-5 pt-3">
+                <div class="row mt-2 pt-3">
                     <div class="col-xl-6 col-lg-12 mb-4">
                         <div class="tm-bg-gray p-5 h-100">
                             <h3 class="tm-text-primary mb-3">Do you want to get our latest updates?</h3>
@@ -48,5 +48,5 @@
 		</div>
 	</div>
 
-	<script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+	<script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
