--- a/views/addPhoto.ejs
+++ b/views/addPhoto.ejs
@@ -27,7 +27,7 @@
                                     <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                                         <ul class="navbar-nav text-uppercase">
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="../">Photos <span class="sr-only">(current)</span></a>
+                                                <a class="nav-link tm-nav-link" href="/">Photos <span class="sr-only">(current)</span></a>
                                             </li>
                                             <li class="nav-item">
                                                 <a class="nav-link tm-nav-link" href="../about.ejs">About</a>
@@ -74,7 +74,7 @@
                     <div class="mx-auto pb-3 tm-about-text-container px-3">
                         <div class="row">
                             <div class="col-lg-12 mb-5">
-                                <form id="contact-form" action="/photos" method="POST" class="tm-contact-form">
+                                <form id="contact-form" action="/photos" method="POST" class="tm-contact-form" encType="multipart/form-data">
                                   <div class="form-group">
                                     <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required="" />
                                   </div>
