update photo details

--- a/public/css/templatemo-video-catalog.css
+++ b/public/css/templatemo-video-catalog.css
@@ -351,9 +351,9 @@ h2, p { color: #666666; }
 }
 
 #tm-fixed-header-bg { height: 450px; }
-.tm-fixed-header-1 { background-image: url(../img/video-detail-1.jpg); }
-.tm-fixed-header-2 { background-image: url(../img/about-1.jpg); }
-.tm-fixed-header-3 { background-image: url(../img/contact-1.jpg); }
+.tm-fixed-header-1 { background-image: url(../img/1975593339.jpeg); }
+.tm-fixed-header-2 { background-image: url(../img/formula-1-istanbul-aa-1606266.jpg); }
+.tm-fixed-header-3 { background-image: url(../img/lewis-hamilton-mercedes-1st-po-1.jpg); }
 
 video {
   width: 100%;
