--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -41,7 +41,7 @@
                     <div class="col-12">
                         <p class="text-right">Copyright 2022 The Altinok Company 
                         
-                        - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+                        - Designed by <a href="https://alialtinok.github.io" rel="nofollow" target="_parent">altinokali</a></p>
                     </div>
                 </footer>
 			</div> <!-- .tm-content-container -->
