--- a/views/addPhoto.ejs
+++ b/views/addPhoto.ejs
@@ -48,9 +48,7 @@
 
 			<div class="tm-welcome-container tm-fixed-header tm-fixed-header-3">
 				<div class="text-center">
-					<p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">
-                        Talk to Us<br>about any question you have
-                    </p>                	
+				               	
 				</div>                
             </div>
 
@@ -71,22 +69,21 @@
 							</div>							
 						</div>						
 					</div>
-                    <div class="mx-auto pb-3 tm-about-text-container px-3">
+                    <div class="mx-auto pb-3 tm-about-text-container">
                         <div class="row">
                             <div class="col-lg-12 mb-5">
-                                <form id="contact-form" action="/photos" method="POST" class="tm-contact-form" encType="multipart/form-data">
+                                <form method="POST" action="/photos" class="tm-contact-form" enctype="multipart/form-data">
                                   <div class="form-group">
-                                    <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required="" />
-                                  </div>
-                                 
-                                 
-                                  <div class="form-group">
-                                    <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Photo Description"
-                                     required></textarea>
+                                    <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required>
                                   </div>
 
                                   <div class="form-group">
-                                      <input type="file" name="image" class="form-control-file rounded-0" >
+                                    <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Photo Description"
+                                              required></textarea>
+                                  </div>
+
+                                  <div class="from-group">
+                                    <input type="file" name="image" class="form-control-file rounded-0">
                                   </div>
 
                                   <div class="form-group mb-0">
@@ -94,10 +91,9 @@
                                   </div>
                                 </form>    
                             </div>
-                            
+
                         </div>  
-                    </div>                                      			
-				</div>
+                    </div>                              
 
 
 			</div>
