--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -42,14 +42,13 @@
 									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-pinterest"></i></a>
 									<a href="" class="tm-bg-white tm-share-button"><i class="far fa-envelope"></i></a>
 								</div>
-								<p class="mb-4">Author: <a href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
-								<a href="#" class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
-									<i class="fas fa-heart mr-3 tm-liked-icon"></i>
-									<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
-									<span id="tm-likes-count">486 likes</span>
-								</a>
-								<div>
-									<button class="btn btn-primary p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Download Video</span></button>	
+								<p class="mb-4">Author: <a href="https://alialtinok.github.io" class="tm-text-link">Ali Altinok</a></p>
+								<div class="text-center">
+									<a href="/photos/edit/<%= photo._id %>" class="btn btn-primary mb-3 p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Update Details	</span></a>	
+								</div>
+
+								<div class="text-center">
+									<button class="btn btn-danger p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Delete Photo</span></button>	
 								</div>								
 							</div>
 						</div>
