--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -74,7 +74,7 @@
                     <div class="mx-auto pb-3 tm-about-text-container px-3">
                         <div class="row">
                             <div class="col-lg-12 mb-5">
-                                <form id="contact-form" action="/photos" method="POST" class="tm-contact-form" encType="multipart/form-data">
+                                <form id="contact-form" method="POST" action="/photos/<%= photo._id %>?_method=PUT" class="tm-contact-form" encType="multipart/form-data">
                                   <div class="form-group">
                                     <input type="text" name="title" value="<%= photo.title %>" class="form-control rounded-0" placeholder="Photo Title" required="" />
                                   </div>
@@ -86,7 +86,7 @@
                                   </div>
 
                                   <div class="form-group mb-0">
-                                    <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Submit</span></button>
+                                    <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Update</span></button>
                                   </div>
                                 </form>    
                             </div>
